# pdpSmithDr

./: AUTHORS  CMakeLists.txt  DEPENDANCES  TODO  compile.sh  run_tests.sh
plugins/: CMakeLists.txt  PluginDefs.hpp  SmithDRPluginCompilation.cmake
plugins/algo/: CMakeLists.txt
plugins/algo/demo/: AlgoExamplePlugin.cpp  BuildCheckerboardImagePlugin.cpp  GenerateHistogramImagePlugin.cpp  GenerateMeshExamplePlugin.cpp  ImageAccessMirrorPlugin.cpp  ImageAccessMixPlugin.cpp  ImageMirrorPlugin.cpp  ImageMirrorPlugin.cpp~  ImageMixPlugin.cpp  MeshExample1Plugin.cpp  MeshExample2Plugin.cpp  SeuillagePlugin.cpp
plugins/algo/filters/: FilteringCommon.hxx  ImageFilteringPlugin.cpp
plugins/algo/image/: RegionGrowingPlugin.cpp
plugins/io/: CMakeLists.txt
plugins/io/RawImage/: LoaderRawImagePlugin.cpp
plugins/io/asc/: LoaderAsc.hpp  LoaderAsc.hxx  LoaderAscPlugin.cpp  SaverAsc.hpp  SaverAsc.hxx  SaverAscPlugin.cpp
plugins/io/imageloaderqt/: ImageLoaderQt.hpp  ImageLoaderQt.hxx  ImageLoaderQtPlugin.cpp  ImageSaverQt.hpp  ImageSaverQt.hxx  ImageSaverQtPlugin.cpp
plugins/io/pgm/: LoaderPgm.hpp  LoaderPgm.hxx  LoaderPgm3dPlugin.cpp  LoaderPgmPlugin.cpp  LoaderSdp3dPlugin.cpp  SaverPgm.hpp  SaverPgm.hxx  SaverPgm3dPlugin.cpp  SaverPgmPlugin.cpp  SaverSdp3dPlugin.cpp
plugins/io/ply/: LoaderPly.hpp  LoaderPly.hxx  LoaderPlyPlugin.cpp  SaverPly.hpp  SaverPly.hxx  SaverPlyPlugin.cpp
plugins/io/stl/: LoaderStl.hpp  LoaderStl.hxx  LoaderStlPlugin.cpp  SaverStl.hpp  SaverStl.hxx  SaverStlPlugin.cpp
plugins/widgets/: CMakeLists.txt
plugins/widgets/Qt/: CMakeLists.txt  OpenFileButtonPlugin.cpp  OpenFileButtonPlugin.hpp  QtWidgetExamplePlugin.cpp
src/: CMakeLists.txt  SmartPointers.hpp  SmithDRDefs.hpp  Types.hpp
src/core/: AtomicValue.hpp  Attribute.hpp  Attribute.hxx  AttributeDescription.cpp  AttributeDescription.hpp  AttributeDescription.hxx  AttributeKey.cpp  AttributeKey.hpp  BoundingBox.hpp  BoundingBox.hxx  CMakeLists.txt  Clonable.cpp  Clonable.hpp  Coordinates.hpp  Coordinates.hxx  DataType.cpp  DataType.hpp  DataType.hxx  DynamicDimensionalCoordinates.hpp  DynamicDimensionalCoordinates.hxx  Line3d.hpp  Line3d.hxx  Math.hpp  Math.hxx  MutexLocker.hpp  NDimensionalCoordinates.hpp  NDimensionalCoordinates.hxx  Object.hpp  Object.hxx  ObjectDescription.cpp  ObjectDescription.hpp  ObjectDescription.hxx  Pixel.hpp  Point.hpp  Point.hxx  Point3d.hpp  Point3d.hxx  RGBCoordinates.hpp  RGBCoordinates.hxx  Segment3d.hpp  (+19 more)
src/core/image/: CMakeLists.txt  ChannelType.cpp  ChannelType.hpp  ChannelType.hxx  Image.hpp  Image.hxx  ImageDataType.hpp  ImageDataType.hxx  ImageView.hpp  ImageView.hxx  ImageViewInfo.cpp  ImageViewInfo.hpp  ImageViewInfo.hxx  ImageView_.hpp  ImageView_.hxx  SliceArray.cpp  SliceArray.cpp.save  SliceArray.hpp  SliceArray.hpp.save  SliceArray.hxx  SliceArray.hxx.save
src/core/mesh/: AttributesManager.hpp  AttributesManager.hxx  CMakeLists.txt  EdgeFromMeshView.hpp  EdgeFromMeshView.hxx  EdgeFromMeshView.hxx~  FaceFromMeshView.hpp  FaceFromMeshView.hxx  FaceFromMeshView.hxx~  MeshView.hpp  MeshView.hxx  MeshView_.hpp  MeshView_.hxx  Normal.hpp  TextureCoordinates.hpp  TextureCoordinates.hxx  VertexBasedFromMeshView.hpp  VertexBasedFromMeshView.hxx  VertexFromMeshView.hpp  VertexFromMeshView.hxx
src/frontend/: CMakeLists.txt
src/frontend/lib/: AccessImageViewAlgorithm.hpp  AccessImageViewAlgorithm.hxx  Algorithm.cpp  Algorithm.hpp  Algorithm.hxx  AlgorithmInfo.hpp  AlgorithmInfo.hxx  AlgorithmManager.cpp  AlgorithmManager.hpp  AlgorithmManager.hxx  Any.cpp  Any.hpp  Any.hxx  BlackBoxAlgorithm.cpp  BlackBoxAlgorithm.hpp  CMakeLists.txt  ComputedImageViewAlgorithm.hpp  ComputedImageViewAlgorithm.hxx  Loader.cpp  Loader.hpp  LoaderManager.cpp  LoaderManager.hpp  LoaderManager.hxx  Manager.hpp  Manager.hxx  MeshViewAlgorithm.hpp  MeshViewAlgorithm.hxx  Parameter.cpp  Parameter.hpp  Parameter.hxx  ParametrizationWidget.cpp  ParametrizationWidget.hpp  ParametrizationWidgetFactory.hpp  ParametrizationWidgetFactoryManager.cpp  ParametrizationWidgetFactoryManager.hpp  ParametrizationWidgetFactoryManager.hxx  Query.hpp  Query.hxx  Saver.cpp  Saver.hpp  (+7 more)
src/frontend/libqt/: CMakeLists.txt  Parameter.cpp  Parameter.hpp  QtParametrizationWidget.hpp  QtParametrizationWidget.hxx  QtXMLParamParser.cpp  QtXMLParamParser.hpp  QtXMLValueGenerator.cpp  QtXMLValueGenerator.hpp  QtXMLValueParser.cpp  QtXMLValueParser.hpp  SDRParameter.hpp  SDRParameterFactory.cpp  SDRParameterFactory.hpp  SimpleParameter.cpp  SimpleParameter.hpp  ThreadSleeper.hpp  parameterTmp.cpp  parameterTmp.h  parameterTmp.hpp  qtparser.cpp  qtparser.h
src/frontend/qtgui/: AlgorithmAction.cpp  AlgorithmAction.hpp  AlgorithmConfiguratorDialog.cpp  AlgorithmConfiguratorDialog.hpp  AlgorithmParameterizer.cpp  AlgorithmParameterizer.hpp  CMakeLists.txt  GraphDockWidget.cpp  GraphDockWidget.hpp  GraphicViewsManager.cpp  GraphicViewsManager.hpp  LoaderAction.cpp  LoaderAction.hpp  MainWindow.cpp  MainWindow.hpp  Menus.cpp  Menus.hpp  ViewConfigDialog.cpp  ViewConfigDialog.hpp  main.cpp
src/imageprocessing/: CMakeLists.txt  Fourier.cpp  Fourier.hpp  Hartley.cpp  Hartley.hpp  ImageRestoration.cpp  ImageRestoration.hpp  RegionGrowing.cpp  RegionGrowing.hpp
src/imageprocessing/filters/: CMakeLists.txt  DilationFilter.hpp  DilationFilter.hxx  DogFilter.hpp  DogFilter.hxx  ErosionFilter.hpp  ErosionFilter.hxx  Filter.hpp  Filter.hxx  FrequencyFilter.cpp  FrequencyFilter.hpp  GaussianFrequencyFilter.hpp  GaussianFrequencyFilter.hxx  (+30 more)
src/meshprocessing/: AvailableToolsManager.hpp  CMakeLists.txt  mathematicals_types.hpp
src/utils/: CMakeLists.txt  sdFileUtils.cpp  sdFileUtils.hpp  sdRawUtils.hpp  sdRawUtils.hxx  sdTypeUtils.hpp  sdTypeUtils.hxx
tests/: CMakeLists.txt  test_Fourier.cpp  test_Hartley.cpp  test_ImageFiltering.cpp  test_ImageRestoration.cpp  test_RegionGrowing.cpp  test_checkerboard.cpp  test_frontend.cpp  test_g.cpp  test_io.cpp  test_io_nifti1.cpp  test_iterators.cpp  test_mesh.cpp  test_parameter.cpp  test_plugins.cpp  test_sinefitting.cpp  test_slice_array.cpp  test_tomo.cpp  these.txt
(+204 files in other folders)
